--- a/Statistics.html
+++ b/Statistics.html
@@ -1,145 +1,145 @@
-<!doctype html>
-<html>
-	<head>
-		<meta charset&#61;&ldquoUTF&#45&#59;8&ldquo>
-		<link href&#61;&ldquoStatistics.css&ldquo rel&#61;&ldquostylesheet&ldquo type&#61;&ldquotext&#47&#59;css&ldquo &#47&#59;>
-		<title>Statistics<&#47&#59;title>
-	<&#47&#59;head>
-	<body>
-		<p><a href&#61;&ldquoCRICKETPLAYERS.html&ldquo>Teams and Their Players<&#47&#59;a> <a href&#61;&ldquoindex.html&ldquo>Introduction To Cricket<&#47&#59;a> <a href&#61;&ldquoHistory.html&ldquo>History<&#47&#59;a> <a href&#61;&ldquorefrences.html&ldquo>Refrences<&#47&#59;a><&#47&#59;p>
-		<h1><center>Statistics<&#47&#59;center><&#47&#59;h1>
-		<center><table><&#47&#59;center>
-		<center><h2>Test Cricket Top 5<&#47&#59;h2><&#47&#59;center>
-		<tr>
-			<th>Position<&#47&#59;th>
-			<th>Team<&#47&#59;th>
-			<th>Matches<&#47&#59;th>
-			<th>Points<&#47&#59;th>
-			<th>Rating<&#47&#59;th>
-		<&#47&#59;tr>
-		<tr class&#61;tr01>
-			<td>1<&#47&#59;td>
-			<td>India<&#47&#59;td>
-			<td>36<&#47&#59;td>
-			<td>4,493<&#47&#59;td>
-			<td>125<&#47&#59;td>
-		<&#47&#59;tr>
-		<tr>
-			<td>2<&#47&#59;td>
-			<td>South Africa<&#47&#59;td>
-			<td>34<&#47&#59;td>
-			<td>3,767<&#47&#59;td>
-			<td>111<&#47&#59;td>
-		<&#47&#59;tr>
-		<tr>
-			<td>3<&#47&#59;td>
-			<td>England<&#47&#59;td>
-			<td>43<&#47&#59;td>
-			<td>4,497<&#47&#59;td>
-			<td>105<&#47&#59;td>
-		<&#47&#59;tr>
-		<tr>
-			<td>4<&#47&#59;td>
-			<td>New Zeland<&#47&#59;td>
-			<td>32<&#47&#59;td>
-			<td>3,114<&#47&#59;td>
-			<td>97<&#47&#59;td>
-		<&#47&#59;tr>
-		<tr>
-			<td>5<&#47&#59;td>
-			<td>Australia<&#47&#59;td>
-			<td>34<&#47&#59;td>
-			<td>3,294<&#47&#59;td>
-			<td>97<&#47&#59;td>
-		<&#47&#59;tr>
-		<center><table><&#47&#59;center>
-		<h2>ODI's Top 5<&#47&#59;h2>
-		<tr>
-			<th>Position<&#47&#59;th>
-			<th>Team<&#47&#59;th>
-			<th>Matches<&#47&#59;th>
-			<th>Points<&#47&#59;th>
-			<th>Rating<&#47&#59;th>
-		<&#47&#59;tr>
-		<tr class&#61;tr02>
-			<td>1<&#47&#59;td>
-			<td>South Africa<&#47&#59;td>
-			<td>53<&#47&#59;td>
-			<td>6,386<&#47&#59;td>
-			<td>120<&#47&#59;td>
-		<&#47&#59;tr>
-		<tr>
-			<td>2<&#47&#59;td>
-			<td>India<&#47&#59;td>
-			<td>51<&#47&#59;td>
-			<td>6,054<&#47&#59;td>
-			<td>119<&#47&#59;td>
-		<&#47&#59;tr>
-		<tr>
-			<td>3<&#47&#59;td>
-			<td>Australia<&#47&#59;td>
-			<td>52<&#47&#59;td>
-			<td>5,948<&#47&#59;td>
-			<td>114<&#47&#59;td>
-		<&#47&#59;tr>
-		<tr>
-			<td>4<&#47&#59;td>
-			<td>England<&#47&#59;td>
-			<td>54<&#47&#59;td>
-			<td>6,156<&#47&#59;td>
-			<td>114<&#47&#59;td>
-		<&#47&#59;tr>
-		<tr>
-			<td>5<&#47&#59;td>
-			<td>New Zeland<&#47&#59;td>
-			<td>47<&#47&#59;td>
-			<td>5,293<&#47&#59;td>
-			<td>113<&#47&#59;td>
-		<&#47&#59;tr>
-		<center><table><&#47&#59;center>
-		<center><h2>Test Cricket Top 5<&#47&#59;h2><&#47&#59;center>
-		<tr>
-			<th>Position<&#47&#59;th>
-			<th>Team<&#47&#59;th>
-			<th>Matches<&#47&#59;th>
-			<th>Points<&#47&#59;th>
-			<th>Rating<&#47&#59;th>
-		<&#47&#59;tr>
-		<tr class&#61;tr03>
-			<td>1<&#47&#59;td>
-			<td>New Zeland<&#47&#59;td>
-			<td>13<&#47&#59;td>
-			<td>1,625<&#47&#59;td>
-			<td>125<&#47&#59;td>
-		<&#47&#59;tr>
-		<tr>
-			<td>2<&#47&#59;td>
-			<td>Pakistan<&#47&#59;td>
-			<td>22<&#47&#59;td>
-			<td>2,702<&#47&#59;td>
-			<td>123<&#47&#59;td>
-		<&#47&#59;tr>
-		<tr>
-			<td>3<&#47&#59;td>
-			<td>West Indies<&#47&#59;td>
-			<td>20<&#47&#59;td>
-			<td>2,395<&#47&#59;td>
-			<td>120<&#47&#59;td>
-		<&#47&#59;tr>
-		<tr>
-			<td>4<&#47&#59;td>
-			<td>England<&#47&#59;td>
-			<td>17<&#47&#59;td>
-			<td>2,029<&#47&#59;td>
-			<td>119<&#47&#59;td>
-		<&#47&#59;tr>
-		<tr>
-			<td>5<&#47&#59;td>
-			<td>India<&#47&#59;td>
-			<td>22<&#47&#59;td>
-			<td>2,545<&#47&#59;td>
-			<td>116<&#47&#59;td>
-		<&#47&#59;tr>
+&lt;!doctype html&gt;
+&lt;html&gt;
+	&lt;head&gt;
+		&lt;meta charset&#61;&ldquoUTF&#45&#59;&ldquo&gt;
+		&lt;link href&#61;&ldquoStatistics.css&ldquo rel&#61;&ldquostylesheet&ldquo type&#61;&ldquotext&#47;&#59;css&ldquo &#47;&#59;&gt;
+		&lt;title&gt;Statistics&lt;&#47;&#59;title&gt;
+	&lt;&#47;&#59;head&gt;
+	&lt;body&gt;
+		&lt;p&gt;&lt;a href&#61;&ldquoCRICKETPLAYERS.html&ldquo&gt;Teams and Their Players&lt;&#47;&#59;a&gt; &lt;a href&#61;&ldquoindex.html&ldquo&gt;Introduction To Cricket&lt;&#47;&#59;a&gt; &lt;a href&#61;&ldquoHistory.html&ldquo&gt;History&lt;&#47;&#59;a&gt; &lt;a href&#61;&ldquorefrences.html&ldquo&gt;Refrences&lt;&#47;&#59;a&gt;&lt;&#47;&#59;p&gt;
+		&lt;h1&gt;Statistics&lt;&#47;&#59;&lt;&#47;&#59;h1&gt;
+		&lt;center&gt;&lt;table&gt;&lt;&#47;&#59;center&gt;
+		&lt;center&gt;&lt;h2&gt;Test Cricket Top 5&lt;&#47;&#59;h2&gt;&lt;&#47;&#59;center&gt;
+		&lt;tr&gt;
+			&lt;th&gt;Position&lt;&#47;&#59;th&gt;
+			&lt;th&gt;Team&lt;&#47;&#59;th&gt;
+			&lt;th&gt;Matches&lt;&#47;&#59;th&gt;
+			&lt;th&gt;Points&lt;&#47;&#59;th&gt;
+			&lt;th&gt;Rating&lt;&#47;&#59;th&gt;
+		&lt;&#47;&#59;tr&gt;
+		&lt;tr class&#61;tr01&gt;
+			&lt;td&gt;1&lt;&#47;&#59;td&gt;
+			&lt;td&gt;India&lt;&#47;&#59;td&gt;
+			&lt;td&gt;36&lt;&#47;&#59;td&gt;
+			&lt;td&gt;4,493&lt;&#47;&#59;td&gt;
+			&lt;td&gt;125&lt;&#47;&#59;td&gt;
+		&lt;&#47;&#59;tr&gt;
+		&lt;tr&gt;
+			&lt;td&gt;2&lt;&#47;&#59;td&gt;
+			&lt;td&gt;South Africa&lt;&#47;&#59;td&gt;
+			&lt;td&gt;34&lt;&#47;&#59;td&gt;
+			&lt;td&gt;3,767&lt;&#47;&#59;td&gt;
+			&lt;td&gt;111&lt;&#47;&#59;td&gt;
+		&lt;&#47;&#59;tr&gt;
+		&lt;tr&gt;
+			&lt;td&gt;3&lt;&#47;&#59;td&gt;
+			&lt;td&gt;England&lt;&#47;&#59;td&gt;
+			&lt;td&gt;43&lt;&#47;&#59;td&gt;
+			&lt;td&gt;4,497&lt;&#47;&#59;td&gt;
+			&lt;td&gt;105&lt;&#47;&#59;td&gt;
+		&lt;&#47;&#59;tr&gt;
+		&lt;tr&gt;
+			&lt;td&gt;4&lt;&#47;&#59;td&gt;
+			&lt;td&gt;New Zeland&lt;&#47;&#59;td&gt;
+			&lt;td&gt;32&lt;&#47;&#59;td&gt;
+			&lt;td&gt;3,114&lt;&#47;&#59;td&gt;
+			&lt;td&gt;97&lt;&#47;&#59;td&gt;
+		&lt;&#47;&#59;tr&gt;
+		&lt;tr&gt;
+			&lt;td&gt;5&lt;&#47;&#59;td&gt;
+			&lt;td&gt;Australia&lt;&#47;&#59;td&gt;
+			&lt;td&gt;34&lt;&#47;&#59;td&gt;
+			&lt;td&gt;3,294&lt;&#47;&#59;td&gt;
+			&lt;td&gt;97&lt;&#47;&#59;td&gt;
+		&lt;&#47;&#59;tr&gt;
+		&lt;center&gt;&lt;table&gt;&lt;&#47;&#59;center&gt;
+		&lt;h2&gt;ODI's Top 5&lt;&#47;&#59;h2&gt;
+		&lt;tr&gt;
+			&lt;th&gt;Position&lt;&#47;&#59;th&gt;
+			&lt;th&gt;Team&lt;&#47;&#59;th&gt;
+			&lt;th&gt;Matches&lt;&#47;&#59;th&gt;
+			&lt;th&gt;Points&lt;&#47;&#59;th&gt;
+			&lt;th&gt;Rating&lt;&#47;&#59;th&gt;
+		&lt;&#47;&#59;tr&gt;
+		&lt;tr class&#61;tr02&gt;
+			&lt;td&gt;1&lt;&#47;&#59;td&gt;
+			&lt;td&gt;South Africa&lt;&#47;&#59;td&gt;
+			&lt;td&gt;53&lt;&#47;&#59;td&gt;
+			&lt;td&gt;6,386&lt;&#47;&#59;td&gt;
+			&lt;td&gt;120&lt;&#47;&#59;td&gt;
+		&lt;&#47;&#59;tr&gt;
+		&lt;tr&gt;
+			&lt;td&gt;2&lt;&#47;&#59;td&gt;
+			&lt;td&gt;India&lt;&#47;&#59;td&gt;
+			&lt;td&gt;51&lt;&#47;&#59;td&gt;
+			&lt;td&gt;6,054&lt;&#47;&#59;td&gt;
+			&lt;td&gt;119&lt;&#47;&#59;td&gt;
+		&lt;&#47;&#59;tr&gt;
+		&lt;tr&gt;
+			&lt;td&gt;3&lt;&#47;&#59;td&gt;
+			&lt;td&gt;Australia&lt;&#47;&#59;td&gt;
+			&lt;td&gt;52&lt;&#47;&#59;td&gt;
+			&lt;td&gt;5,948&lt;&#47;&#59;td&gt;
+			&lt;td&gt;114&lt;&#47;&#59;td&gt;
+		&lt;&#47;&#59;tr&gt;
+		&lt;tr&gt;
+			&lt;td&gt;4&lt;&#47;&#59;td&gt;
+			&lt;td&gt;England&lt;&#47;&#59;td&gt;
+			&lt;td&gt;54&lt;&#47;&#59;td&gt;
+			&lt;td&gt;6,156&lt;&#47;&#59;td&gt;
+			&lt;td&gt;114&lt;&#47;&#59;td&gt;
+		&lt;&#47;&#59;tr&gt;
+		&lt;tr&gt;
+			&lt;td&gt;5&lt;&#47;&#59;td&gt;
+			&lt;td&gt;New Zeland&lt;&#47;&#59;td&gt;
+			&lt;td&gt;47&lt;&#47;&#59;td&gt;
+			&lt;td&gt;5,293&lt;&#47;&#59;td&gt;
+			&lt;td&gt;113&lt;&#47;&#59;td&gt;
+		&lt;&#47;&#59;tr&gt;
+		&lt;center&gt;&lt;table&gt;&lt;&#47;&#59;center&gt;
+		&lt;center&gt;&lt;h2&gt;Test Cricket Top 5&lt;&#47;&#59;h2&gt;&lt;&#47;&#59;center&gt;
+		&lt;tr&gt;
+			&lt;th&gt;Position&lt;&#47;&#59;th&gt;
+			&lt;th&gt;Team&lt;&#47;&#59;th&gt;
+			&lt;th&gt;Matches&lt;&#47;&#59;th&gt;
+			&lt;th&gt;Points&lt;&#47;&#59;th&gt;
+			&lt;th&gt;Rating&lt;&#47;&#59;th&gt;
+		&lt;&#47;&#59;tr&gt;
+		&lt;tr class&#61;tr03&gt;
+			&lt;td&gt;1&lt;&#47;&#59;td&gt;
+			&lt;td&gt;New Zeland&lt;&#47;&#59;td&gt;
+			&lt;td&gt;13&lt;&#47;&#59;td&gt;
+			&lt;td&gt;1,625&lt;&#47;&#59;td&gt;
+			&lt;td&gt;125&lt;&#47;&#59;td&gt;
+		&lt;&#47;&#59;tr&gt;
+		&lt;tr&gt;
+			&lt;td&gt;2&lt;&#47;&#59;td&gt;
+			&lt;td&gt;Pakistan&lt;&#47;&#59;td&gt;
+			&lt;td&gt;22&lt;&#47;&#59;td&gt;
+			&lt;td&gt;2,702&lt;&#47;&#59;td&gt;
+			&lt;td&gt;123&lt;&#47;&#59;td&gt;
+		&lt;&#47;&#59;tr&gt;
+		&lt;tr&gt;
+			&lt;td&gt;3&lt;&#47;&#59;td&gt;
+			&lt;td&gt;West Indies&lt;&#47;&#59;td&gt;
+			&lt;td&gt;20&lt;&#47;&#59;td&gt;
+			&lt;td&gt;2,395&lt;&#47;&#59;td&gt;
+			&lt;td&gt;120&lt;&#47;&#59;td&gt;
+		&lt;&#47;&#59;tr&gt;
+		&lt;tr&gt;
+			&lt;td&gt;4&lt;&#47;&#59;td&gt;
+			&lt;td&gt;England&lt;&#47;&#59;td&gt;
+			&lt;td&gt;17&lt;&#47;&#59;td&gt;
+			&lt;td&gt;2,029&lt;&#47;&#59;td&gt;
+			&lt;td&gt;119&lt;&#47;&#59;td&gt;
+		&lt;&#47;&#59;tr&gt;
+		&lt;tr&gt;
+			&lt;td&gt;5&lt;&#47;&#59;td&gt;
+			&lt;td&gt;India&lt;&#47;&#59;td&gt;
+			&lt;td&gt;22&lt;&#47;&#59;td&gt;
+			&lt;td&gt;2,545&lt;&#47;&#59;td&gt;
+			&lt;td&gt;116&lt;&#47;&#59;td&gt;
+		&lt;&#47;&#59;tr&gt;
 		
-	<&#47&#59;body>
-<&#47&#59;html>
+	&lt;&#47;&#59;body&gt;
+&lt;&#47;&#59;html&gt;
